# crispy-memory

./: README.md
c_lib_rust_example/: Cargo.toml  README.md  main.c  somelibname.h
c_lib_rust_example/src/: lib.rs
