[package]
name = "somelibname"
version = "0.1.0"
authors = ["Tony Asleson <tony.asleson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name         = "somelibname"
crate-type   = ["rlib", "cdylib"]

[dependencies]
libc = "0.2.85"
